--- a/JS/V1/public_html/map.html
+++ b/JS/V1/public_html/map.html
@@ -154,6 +154,7 @@
                             const pulse_w_realBottom_mks_min = map__getPulse_w_realBottom_mks_min(pulse.R);
                             if (pulse.W >= pulse_w_realBottom_mks_min) {
                                 depth_mks = pulse.R;
+                                break;
                             }
                         }
 
