--- a/JS/V1/public_html/3D.html
+++ b/JS/V1/public_html/3D.html
@@ -50,9 +50,11 @@
                         <div class="d-inline-block"><div id="sonar__palette"></div></div>
                         <div id="sonar__palette_max_text" class="d-inline-block"></div>
 
-                        <input id="sonar__over_bottom" type="checkbox" checked> over bottom  &nbsp;&nbsp;&nbsp;&nbsp;
-                        <input id="sonar__bottom" type="checkbox" checked> bottom
-                        <input id="sonar__circles" type="checkbox" checked> circles
+                        <input id="sonar__over_bottom" type="checkbox" checked> over bottom  &nbsp;&nbsp;&nbsp; 
+                        <input id="sonar__bottom" type="checkbox" checked> bottom  &nbsp;&nbsp;&nbsp;
+                        <input id="sonar__circles" type="checkbox" checked> circles  &nbsp;&nbsp;&nbsp;
+
+                        <input type="range" class="form-range" min="0" max="3000" value="0" id="sonar__range_over_bottom" title="Мощность отраженок над дном" style="width: 200px;">
 
                     </div>   
                     <div id="sonar__3D_block"></div>
@@ -90,7 +92,7 @@
                 let sonar__mks2px_fullScale_dx = 1;
                 let sonar__getOffsetLat_px_dx = 1;
                 const sonar__block_size_px = 800;
-                const sonar__logic_pulses_block_h_px = 100;
+                const sonar__logic_pulsesOverBottom_block_h_px = 100;
                 const sonar__mks2m = 1367.0;
                 let sonar__pulse_w_px = 10;
 
@@ -105,24 +107,31 @@
                     });
                     $('#sonar__over_bottom').change(() => {
                         if ($('#sonar__over_bottom').is(":checked")) {
-                            $('.logic_pulses_block').show();
+                            $('div.logic_pulsesOverBottom_block').show();
                         } else {
-                            $('.logic_pulses_block').hide();
+                            $('div.logic_pulsesOverBottom_block').hide();
                         }
                     });
                     $('#sonar__bottom').change(() => {
                         if ($('#sonar__bottom').is(":checked")) {
-                            $('.logic_pulses_full_block').show();
+                            $('div.logic_pulsesFull_block').show();
                         } else {
-                            $('.logic_pulses_full_block').hide();
+                            $('div.logic_pulsesFull_block').hide();
                         }
                     });
                     $('#sonar__circles').change(() => {
                         if ($('#sonar__circles').is(":checked")) {
-                            $('.sonar__circles').show();
+                            $('div.sonar__circles').show();
                         } else {
-                            $('.sonar__circles').hide();
+                            $('div.sonar__circles').hide();
                         }
+                    });
+                    $('#sonar__range_over_bottom').change(() => {
+                        const pulseW_mks = parseInt($('#sonar__range_over_bottom').val()) || 0;
+                        $('div.logic_pulseOverBottom').show().filter(function () {
+                            return $(this).attr('w_mks') < pulseW_mks;
+                        }).hide();
+                        $('#sonar__range_over_bottom').attr('title','Мощность отраженок над дном, mks: '+pulseW_mks); 
                     });
                 }
 
@@ -230,9 +239,9 @@
                             }
 
                             sonar__dataItemsCount++;
-                        } 
-                        
-                        
+                        }
+
+
                     } // one line
 
 
@@ -242,7 +251,7 @@
                     $('#sonar__palette_max_text').html(Math.round(sonar__depth_max * 100) / 100 + ' m');
 
                     sonar__getColor_dx = (sonar__depth_max - sonar__depth_min) / sonar__colors.length;
-                    sonar__mks2px_fullScale_dx = (2 * depth_max_allow * sonar__mks2m) / sonar__logic_pulses_block_h_px;
+                    sonar__mks2px_fullScale_dx = (2 * depth_max_allow * sonar__mks2m) / sonar__logic_pulsesOverBottom_block_h_px;
                     sonar__getOffsetLng_px_dx = (sonar__lng_max - sonar__lng_min) / sonar__block_size_px;
                     sonar__getOffsetLat_px_dx = (sonar__lat_max - sonar__lat_min) / sonar__block_size_px; //max size paper
                     sonar__pulse_w_px = Math.round(0.00001 / sonar__getOffsetLng_px_dx);
@@ -265,18 +274,18 @@
                     const left_px = sonar__getOffsetLng_px(lng);
                     const top_px = sonar__block_size_px - sonar__getOffsetLat_px(lat);
 
-                    let html = '<div class="logic_pulses_block" style="left:' + left_px + 'px; top:' + top_px + 'px; box-shadow: 0px 10px 0px -2px ' + color + '; width:' + sonar__pulse_w_px + 'px; ">';
+                    let html = '<div class="logic_pulsesOverBottom_block" style="left:' + left_px + 'px; top:' + top_px + 'px; box-shadow: 0px 10px 0px -2px ' + color + '; width:' + sonar__pulse_w_px + 'px; ">';
                     for (const pulse of data.pulses) {
                         if (pulse.R >= (data.depth_mks - 100)) {
                             break; //only fish over bottom                            
                         }
                         let mt_px = sonar__mks2px(pulse.R, data.depth_mks);
                         let h_px = Math.max(sonar__mks2px(pulse.W, data.depth_mks), 2);
-                        html += '<div class="logic_pulse" style="top:' + mt_px + 'px; height:' + h_px + 'px; width:' + (sonar__pulse_w_px - 2) + 'px; "></div>';
+                        html += '<div class="logic_pulseOverBottom" w_mks="' + pulse.W + '" style="top:' + mt_px + 'px; height:' + h_px + 'px; width:' + (sonar__pulse_w_px - 2) + 'px; "></div>';
                     }
                     html += '</div>';
 
-                    html += '<div class="logic_pulses_full_block" style="left:' + left_px + 'px; top:' + top_px + 'px; box-shadow: 0px 10px 0px -2px ' + color + '; width:' + sonar__pulse_w_px + 'px; ">';
+                    html += '<div class="logic_pulsesFull_block" style="left:' + left_px + 'px; top:' + top_px + 'px; box-shadow: 0px 10px 0px -2px ' + color + '; width:' + sonar__pulse_w_px + 'px; ">';
                     for (const pulse of data.pulses) {
                         if (pulse.R >= (data.depth_mks - 10)) {
                             pulse_color = color; //bottom and under
@@ -285,7 +294,7 @@
                         }
                         let mt_px = sonar__mks2px_fullScale(pulse.R);
                         let h_px = Math.max(sonar__mks2px_fullScale(pulse.W + pulse.R) - mt_px, 2);
-                        html += '<div class="logic_pulse_full" style="top:' + mt_px + 'px; height:' + h_px + 'px; width:' + (sonar__pulse_w_px - 2) + 'px; background-color:' + pulse_color + '; "></div>';
+                        html += '<div class="logic_pulseFull" style="top:' + mt_px + 'px; height:' + h_px + 'px; width:' + (sonar__pulse_w_px - 2) + 'px; background-color:' + pulse_color + '; "></div>';
                     }
                     html += '</div>';
 
@@ -305,14 +314,14 @@
                 }
 
                 function sonar__mks2px(mks, point_depth_mks) {
-                    const sonar__mks2px_dx = point_depth_mks / sonar__logic_pulses_block_h_px;
+                    const sonar__mks2px_dx = point_depth_mks / sonar__logic_pulsesOverBottom_block_h_px;
                     let px = Math.round(mks / sonar__mks2px_dx);
-                    px = Math.min(Math.max(px, 0), sonar__logic_pulses_block_h_px); //constrain from to
+                    px = Math.min(Math.max(px, 0), sonar__logic_pulsesOverBottom_block_h_px); //constrain from to
                     return px;
                 }
                 function sonar__mks2px_fullScale(mks) {
                     let px = Math.round(mks / sonar__mks2px_fullScale_dx);
-                    px = Math.min(Math.max(px, 0), sonar__logic_pulses_block_h_px); //constrain from to
+                    px = Math.min(Math.max(px, 0), sonar__logic_pulsesOverBottom_block_h_px); //constrain from to
                     return px;
                 }
 
@@ -348,10 +357,10 @@
         border: 1px solid #003580;
         padding-top: 20px;
     }
-    .logic_pulses_block{
+    .logic_pulsesOverBottom_block{
         display: block;
         float: left;        
-        height: 100px; /*sonar__logic_pulses_block_h_px*/
+        height: 100px; /*sonar__logic_pulsesOverBottom_block_h_px*/
         box-shadow: 0px 8px 0px 0px black;       
         position: absolute;        
         z-index: 500;
@@ -359,14 +368,14 @@
         padding: 0;
         margin: 0;
     }
-    .logic_pulses_block:hover{
+    .logic_pulsesOverBottom_block:hover{
         border-left: 1px solid red;
         border-right: 1px solid red;
         border-top: 1px solid red;        
         background-color: white;
         z-index: 600;        
     }
-    .logic_pulse{     
+    .logic_pulseOverBottom{     
         opacity: 0.3;
         background-color: grey;       
         position: absolute;    
@@ -375,10 +384,10 @@
     }     
 
 
-    .logic_pulses_full_block{
+    .logic_pulsesFull_block{
         display: block;
         float: left;        
-        height: 100px; /*sonar__logic_pulses_block_h_px*/
+        height: 100px; /*sonar__logic_pulsesOverBottom_block_h_px*/
         box-shadow: 0px 8px 0px 0px black;     
         position: absolute;
         opacity: 0.4;
@@ -387,7 +396,7 @@
         margin: 0;
         transform: rotate(20deg);
     }
-    .logic_pulses_full_block:hover{
+    .logic_pulsesFull_block:hover{
         border-left: 1px solid red;
         border-right: 1px solid red;
         border-top: 1px solid red;
@@ -396,7 +405,7 @@
         z-index: 600;       
 
     }
-    .logic_pulse_full{          
+    .logic_pulseFull{          
         background-color: grey;       
         position: absolute;    
         padding: 0;
