--- a/JS/V1/public_html/3D.html
+++ b/JS/V1/public_html/3D.html
@@ -54,7 +54,8 @@
                         <input id="sonar__circles" type="checkbox" checked> circles  &nbsp;&nbsp;&nbsp;
                         <input type="range" class="form-range" min="0" max="3000" value="0" id="sonar__range_pulse_w" title="Мощность отраженок" style="width: 200px;">
                     </div>   
-                    <div id="sonar__2D_block"></div>
+                    <div id="sonar__2D_block_latconst_lng"></div>
+                    <div id="sonar__2D_block_lat_lngconst"></div>                    
                     <div id="sonar__3D_block"></div>
                 </div>                
             </div>
@@ -93,7 +94,7 @@
                 const sonar__logic_pulsesOverBottom_block_h_px = 100;
                 const sonar__mks2m = 1367.0;
                 let sonar__pulse_w_px = 10;
-                let sonar__pointsLatLng = [];
+                let sonar__3D_pointsLatLng = [];
 
                 document.addEventListener('DOMContentLoaded', function () {
                     sonar__palette();
@@ -152,7 +153,7 @@
                 }
 
                 function sonar__bathymetryProcess() {
-                    sonar__pointsLatLng = [];
+                    sonar__3D_pointsLatLng = [];
                     sonar__depth_min = 0;
                     sonar__depth_max = 0;
                     depth_min_allow = parseFloat($('#form_bathymetry__depth_min_input').val()) || 0;
@@ -213,18 +214,18 @@
                             const lat5 = Math.round(lat * 100000) / 100000;
                             const lng5 = Math.round(lng * 100000) / 100000;
                             const idx = lat5 + '_' + lng5;
-                            if (sonar__pointsLatLng.hasOwnProperty(idx)) {
-                                //console.log('double1', depthM, sonar__pointsLatLng[idx].depthM);
-                                //console.log('double2', pulses, sonar__pointsLatLng[idx].pulses);
-                                depthM = (sonar__pointsLatLng[idx].depthM + depthM) / 2.0;
-                                pulses = pulses.concat(sonar__pointsLatLng[idx].pulses);
+                            if (sonar__3D_pointsLatLng.hasOwnProperty(idx)) {
+                                //console.log('double1', depthM, sonar__3D_pointsLatLng[idx].depthM);
+                                //console.log('double2', pulses, sonar__3D_pointsLatLng[idx].pulses);
+                                depthM = (sonar__3D_pointsLatLng[idx].depthM + depthM) / 2.0;
+                                pulses = pulses.concat(sonar__3D_pointsLatLng[idx].pulses);
                             }
                             let point = {
                                 depthM: depthM,
                                 depth_mks: depth_mks,
                                 pulses: pulses
                             };
-                            sonar__pointsLatLng[idx] = point;
+                            sonar__3D_pointsLatLng[idx] = point;
 
                             if (sonar__depth_min > depthM) {
                                 sonar__depth_min = depthM;
@@ -264,9 +265,9 @@
                     sonar__getOffsetLat_px_dx = (sonar__lat_max - sonar__lat_min) / sonar__block_size_px; //max size paper
                     sonar__pulse_w_px = Math.round(0.00001 / sonar__getOffsetLng_px_dx);
 
-                    for (let index in sonar__pointsLatLng) {
+                    for (let index in sonar__3D_pointsLatLng) {
                         const ll = index.split(/_/);
-                        sonar__point(ll[0], ll[1], sonar__pointsLatLng[index]);
+                        sonar__3D_point(ll[0], ll[1], sonar__3D_pointsLatLng[index]);
                     }
 
                     $('div.logic_pulsesOverBottom_block').unbind('click').click(function () {
@@ -282,17 +283,41 @@
                 }
 
                 function sonar__2D_render(lat, lng) {
+                    $('#sonar__2D_block_latconst_lng').html('');
+                    $('#sonar__2D_block_lat_lngconst').html('');
                     if (lat < 1 || lng < 1) {
                         return;
                     }
-                    for (let index in sonar__pointsLatLng) {
+                    for (let index in sonar__3D_pointsLatLng) {
                         const ll = index.split(/_/);
-                        const lat_curr = ll[0];
-                        const lng_curr = ll[1];
-                        sonar__pointsLatLng[index];
+                        const lat_curr = parseFloat(ll[0]) || 0;
+                        const lng_curr = parseFloat(ll[1]) || 0;
+                        if (lat === lat_curr) {
+                            $('#sonar__2D_block_latconst_lng').append(sonar__2D_point(lat_curr, lng_curr, sonar__3D_pointsLatLng[index], false));
+                            console.log('latconst', lat_curr, lng_curr);
+                        }
+                        if (lng === lng_curr) {
+                            $('#sonar__2D_block_lat_lngconst').append(sonar__2D_point(lat_curr, lng_curr, sonar__3D_pointsLatLng[index], true));
+                            console.log('lngconst', lat_curr, lng_curr);
+                        }
                     }
-                    
-                    $('#sonar__2D_block').html();
+                }
+                function sonar__2D_point(lat, lng, data, isVertical) {
+                    const color = sonar__getColor(data.depthM);
+                    const left_px = isVertical ? sonar__getOffsetLat_px(lat) : sonar__getOffsetLng_px(lng);
+
+                    let html = '<div class="sonar__2D_pulses" lat="' + lat + '" lng="' + lng + '" style="left:' + left_px + 'px; box-shadow: 0px 10px 0px -2px ' + color + '; width:' + sonar__pulse_w_px + 'px; ">';
+                    for (const pulse of data.pulses) {
+                        if (pulse.R >= (data.depth_mks - 100)) {
+                            continue; //only fish over bottom                            
+                        }
+                        let mt_px = sonar__mks2px(pulse.R, data.depth_mks);
+                        let h_px = Math.max(sonar__mks2px(pulse.W, data.depth_mks), 2);
+                        html += '<div class="sonar__2D_pulse" title="R=' + pulse.R + ' W=' + pulse.W + ' ' + (Math.round((pulse.R / sonar__mks2m) * 100) / 100) + 'm" w_mks="' + pulse.W + '" style="top:' + mt_px + 'px; height:' + h_px + 'px; width:' + (sonar__pulse_w_px - 2) + 'px; "></div>';
+                    }
+                    html += '</div>';
+
+                    return html;
                 }
 
 
@@ -303,12 +328,12 @@
                     }
                 }
 
-                function sonar__point(lat, lng, data) {
+                function sonar__3D_point(lat, lng, data) {
                     const color = sonar__getColor(data.depthM);
                     const left_px = sonar__getOffsetLng_px(lng);
                     const top_px = sonar__block_size_px - sonar__getOffsetLat_px(lat);
 
-                    let html = '<div class="logic_pulsesOverBottom_block" lat="' + lng + '" lng="' + lng + '" style="left:' + left_px + 'px; top:' + top_px + 'px; box-shadow: 0px 10px 0px -2px ' + color + '; width:' + sonar__pulse_w_px + 'px; ">';
+                    let html = '<div class="logic_pulsesOverBottom_block" lat="' + lat + '" lng="' + lng + '" style="left:' + left_px + 'px; top:' + top_px + 'px; box-shadow: 0px 10px 0px -2px ' + color + '; width:' + sonar__pulse_w_px + 'px; ">';
                     for (const pulse of data.pulses) {
                         if (pulse.R >= (data.depth_mks - 100)) {
                             continue; //only fish over bottom                            
@@ -319,7 +344,7 @@
                     }
                     html += '</div>';
 
-                    html += '<div class="logic_pulsesFull_block" lat="' + lng + '" lng="' + lng + '" style="left:' + left_px + 'px; top:' + top_px + 'px; box-shadow: 0px 10px 0px -2px ' + color + '; width:' + sonar__pulse_w_px + 'px; ">';
+                    html += '<div class="logic_pulsesFull_block" lat="' + lat + '" lng="' + lng + '" style="left:' + left_px + 'px; top:' + top_px + 'px; box-shadow: 0px 10px 0px -2px ' + color + '; width:' + sonar__pulse_w_px + 'px; ">';
                     for (const pulse of data.pulses) {
                         let pulse_opacity, pulse_color;
                         if (pulse.R >= (data.depth_mks - 100)) {
@@ -378,6 +403,40 @@
     </body>
 </html>
 <style>
+    #sonar__2D_block_latconst_lng{
+        width: 100%; 
+        height: 250px; 
+        overflow: scroll;
+        position: relative;
+        border: 1px solid #003580;        
+    }
+    #sonar__2D_block_lat_lngconst{
+        width: 100%; 
+        height: 250px; 
+        overflow: scroll;
+        position: relative;
+        border: 1px solid #003580;        
+    }
+    .sonar__2D_pulses{
+        top: 0;
+        display: block;
+        float: left;        
+        height: 100px; /*sonar__logic_pulsesOverBottom_block_h_px*/
+        box-shadow: 0px 8px 0px 0px black;       
+        position: absolute;        
+        z-index: 500;        
+        padding: 0;
+        margin: 0;
+        overflow: hidden;        
+    }
+    .sonar__2D_pulse{     
+        opacity: 0.1;
+        background-color: black;       
+        position: absolute;    
+        padding: 0;
+        margin: 0;        
+    }     
+
     .palette__item {
         width:20px; 
         height:30px; 
